--- a/HTML-CSS/style.css
+++ b/HTML-CSS/style.css
@@ -5,13 +5,11 @@ html {
 }
 
 section {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   border: 10px solid black;
-  width: 30%;
-  height: 300px;
-  margin: auto;
-  text-align: center;
-}
-
-body > h1 {
-
+  width: 500px;
+  height: 500px;
 }
