--- a/HTML-CSS/style.css
+++ b/HTML-CSS/style.css
@@ -1,7 +1,8 @@
 html {
   background-image: url("Images/background-image.png");
   background-size: 1960px 930px;
-  font-size: 19px;
+  font-size: 16px;
+  font-family: Helvetica, sans-serif;
 }
 
 section {
@@ -9,7 +10,18 @@ section {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border: 10px solid black;
-  width: 500px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 18px 18px;
+  border-radius: 20px;
+  width: 450px;
   height: 500px;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+section > h1 {
+  text-align: center;
+  color: rgb(255, 0, 0);
+  font-weight: bold;
+  margin: 40px 0px;
+  font-size: 2rem;
+  height: 100px;
 }
