--- a/HTML-CSS/style.css
+++ b/HTML-CSS/style.css
@@ -1,8 +1,11 @@
 html {
-  background-image: url("Images/background-image.png");
-  background-size: 1960px 930px;
   font-size: 16px;
   font-family: Helvetica, sans-serif;
+  overflow: hidden;
+}
+
+body {
+  background-color: #151019;
 }
 
 section {
@@ -10,16 +13,16 @@ section {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 0px 18px 18px;
+  box-shadow: rgba(0, 0, 0, 0.28) 0px 0px 18px 18px;
   border-radius: 20px;
   width: 450px;
   height: 500px;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.28);
 }
 
 section > h1 {
   text-align: center;
-  color: rgb(255, 0, 0);
+  color: rgb(165, 165, 165);
   font-weight: bold;
   margin: 40px 0px;
   font-size: 2rem;
