--- a/style.css
+++ b/style.css
@@ -19,18 +19,17 @@ section {
   box-shadow: rgba(0, 0, 0, 0.23) 0px 0px 18px 18px;
   border-radius: 20px;
   width: 425px;
-  height: 500px;
+  height: 370px;
   background-color: rgba(0, 0, 0, 0.23);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
 section > header > h1 {
   text-align: center;
   font-weight: bold;
-  margin-top: 20px;
   font-size: 2rem;
   letter-spacing: 3px;
 }
@@ -39,7 +38,6 @@ section > header > h2 {
   text-align: center;
   font-weight: normal;
   font-size: 1.1rem;
-  height: 100px;
   letter-spacing: 2px;
 }
 
@@ -58,13 +56,12 @@ section > form > input {
 }
 
 section > button {
-  margin-bottom: 20px;
   width: 30%;
   height: 40px;
   border: none;
   background-color: rgba(0, 0, 0, 0.48);
   border-radius: 10px;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   letter-spacing: 2px;
   box-shadow: rgba(0, 0, 0, 0.48) 0px 0px 8px 8px;
 }
@@ -78,13 +75,53 @@ label {
 
 section > article {
   height: 30%;
-  width: 60%;
   display: flex;
-  justify-content: start;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
-section > article label > input {
-  border: 10px solid black;
+section > article > form.slider-form{
+  height: 55%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+section > article > form.slider-form > label {
+  font-size: 1.1rem;
+  letter-spacing: 1px;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 10px;
+  background: rgba(0, 0, 0, 0.9);
+  box-shadow: rgba(0, 0, 0, 0.9) 0px 0px 4px 4px;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+  border-radius: 20px;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: #88c8ff;
+  cursor: pointer;
+  border-radius: 20px;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #88c8ff;
+  cursor: pointer;
 }
