--- a/Styles/slider.css
+++ b/Styles/slider.css
@@ -1,11 +1,12 @@
 .slider-form {
-  height: 55%;
+  height: 40%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   font-size: 1.1em;
   letter-spacing: 2px;
   color: rgb(211, 211, 211);
+  padding: 0px 5%;
 }
 
 .slider {
@@ -13,7 +14,7 @@
   width: 100%;
   height: 10px;
   background: rgba(0, 0, 0, 0.9);
-  box-shadow: rgba(0, 0, 0, 0.9) 0px 0px 4px 4px;
+  box-shadow: rgba(0, 0, 0, 0.9) 0px 0px 3px 3px;
   outline: none;
   opacity: 0.7;
   -webkit-transition: 0.2s;
