--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -2,6 +2,7 @@
 @import url("password-field.css");
 @import url("slider.css");
 @import url("checkboxes-form.css");
+@import url("button.css");
 
 * {
   box-sizing: border-box;
@@ -25,7 +26,7 @@ section {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 18px 18px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 8px 8px;
   border-radius: 20px;
   width: 425px;
   height: 400px;
@@ -43,16 +44,4 @@ section > article {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-}
-
-section > button {
-  width: 30%;
-  height: 40px;
-  border: none;
-  background-color: rgba(0, 0, 0, 0.48);
-  border-radius: 10px;
-  font-size: 1.2em;
-  letter-spacing: 2px;
-  box-shadow: rgba(0, 0, 0, 0.48) 0px 0px 8px 8px;
-  color: rgb(211, 211, 211);
 }
