--- a/Styles/password-field.css
+++ b/Styles/password-field.css
@@ -13,3 +13,9 @@ section > form.password-field > input {
   font-size: 1.6em;
   text-align: center;
 }
+
+section > form.password-field > input:hover {
+  border: 1px solid rgb(211, 211, 211);
+  transform: translateY(-3px);
+  cursor: pointer;
+}
