Added copy function

--- a/Styles/password-field.css
+++ b/Styles/password-field.css
@@ -19,3 +19,8 @@ section > form.password-field > input:hover {
   transform: translateY(-3px);
   cursor: pointer;
 }
+
+section > form.password-field > input:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgb(211, 211, 211, 0.2);
+}
