--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,6 +1,6 @@
 @import url("heading.css");
 @import url("password-field.css");
-@import url("slider.css");
+@import url("slider-form.css");
 @import url("checkboxes-form.css");
 @import url("button.css");
 
