--- a/Styles/password-field.css
+++ b/Styles/password-field.css
@@ -1,10 +1,11 @@
 section > form.password-field {
-  text-align: center;
-  width: 100%;
+  position: relative;
+  display: inline-block;
+  width: 80%;
 }
 
-section > form.password-field > input {
-  width: 80%;
+section > form.password-field input {
+  width: 100%;
   border: none;
   height: 40px;
   border-radius: 10px;
@@ -14,13 +15,47 @@ section > form.password-field > input {
   text-align: center;
 }
 
-section > form.password-field > input:hover {
+section > form.password-field input:hover {
   border: 1px solid rgb(211, 211, 211);
   transform: translateY(-3px);
   cursor: pointer;
 }
 
-section > form.password-field > input:active {
+section > form.password-field input:active {
   transform: translateY(-1px);
   box-shadow: 0 5px 10px rgb(211, 211, 211, 0.2);
+}
+
+form.password-field span {
+  visibility: hidden;
+  width: 140px;
+  background-color: rgb(136, 200, 255);
+  color: #fff;
+  font-weight: bold;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: 130%;
+  left: 50%;
+  margin-left: -75px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+form.password-field span::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #88c8ff transparent transparent transparent;
+}
+
+form.password-field:hover span {
+  visibility: visible;
+  opacity: 1;
 }
