--- a/Styles/password-field.css
+++ b/Styles/password-field.css
@@ -26,9 +26,9 @@ section > form.password-field input:active {
   box-shadow: 0 5px 10px rgb(211, 211, 211, 0.2);
 }
 
-form.password-field span {
+section > form.password-field span {
   visibility: hidden;
-  width: 140px;
+  width: 80px;
   background-color: rgb(136, 200, 255);
   color: #fff;
   font-weight: bold;
@@ -38,13 +38,13 @@ form.password-field span {
   position: absolute;
   z-index: 1;
   bottom: 130%;
-  left: 50%;
+  left: 60%;
   margin-left: -75px;
   opacity: 0;
   transition: opacity 0.3s;
 }
 
-form.password-field span::after {
+section > form.password-field span::after {
   content: "";
   position: absolute;
   top: 100%;
@@ -55,7 +55,7 @@ form.password-field span::after {
   border-color: #88c8ff transparent transparent transparent;
 }
 
-form.password-field:hover span {
+section > form.password-field:hover span {
   visibility: visible;
   opacity: 1;
 }
