--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -3,6 +3,7 @@
 @import url("slider-form.css");
 @import url("checkboxes-form.css");
 @import url("button.css");
+@import url("responsive.css");
 
 * {
   box-sizing: border-box;
@@ -40,7 +41,7 @@ section {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  color: rgb(211, 211, 211);
+  color: rgb(222, 222, 222);
 }
 
 section > article {
