--- a/Styles/responsive.css
+++ b/Styles/responsive.css
@@ -8,7 +8,17 @@
   }
 
   .container {
-    line-height: 1.3;
+    line-height: 1.6;
     gap: 5px;
+  }
+
+  .slider-form {
+    font-size: 1.2em;
+  }
+
+  section > form.password-field input:hover,
+  input:active {
+    border: 1px solid rgb(211, 211, 211);
+    transform: translateY(-1px);
   }
 }
