--- a/Styles/responsive.css
+++ b/Styles/responsive.css
@@ -16,8 +16,7 @@
     font-size: 1.2em;
   }
 
-  section > form.password-field input:hover,
-  input:active {
+  section > form.password-field input:focus {
     border: 1px solid rgb(211, 211, 211);
     transform: translateY(-1px);
   }
