--- a/Styles/password-field.css
+++ b/Styles/password-field.css
@@ -10,13 +10,13 @@ section > form.password-field input {
   height: 40px;
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.48);
-  color: rgb(222, 222, 222);
+  color: rgb(211, 211, 211);
   font-size: 1.6em;
   text-align: center;
 }
 
 section > form.password-field input:hover {
-  border: 1px solid rgb(222, 222, 222);
+  border: 1px solid rgb(211, 211, 211);
   transform: translateY(-1px);
   cursor: pointer;
 }
@@ -24,6 +24,10 @@ section > form.password-field input:hover {
 section > form.password-field input:active {
   transform: translateY(1px);
   box-shadow: 0 5px 10px rgb(211, 211, 211, 0.2);
+}
+
+section > form.password-field input:focus {
+  outline: none;
 }
 
 section > form.password-field span {
