--- a/Styles/responsive.css
+++ b/Styles/responsive.css
@@ -15,4 +15,15 @@
   .slider-form {
     font-size: 1.2em;
   }
+
+  section > form.password-field input:hover,
+  section > form.password-field input:active {
+    border: 1px solid rgb(211, 211, 211);
+    box-shadow: 0 5px 10px rgb(211, 211, 211, 0.2);
+    transform: translateY(1px);
+  }
+
+  section > form.password-field input:focus {
+    outline: none;
+  }
 }
