--- a/Styles/responsive.css
+++ b/Styles/responsive.css
@@ -16,10 +16,43 @@
     font-size: 1.2em;
   }
 
+  section > form.password-field input:hover {
+    border: 0px;
+    transform: translateY(0px);
+    cursor: pointer;
+  }
+
   section > form.password-field input:active {
     border: 1px solid rgb(211, 211, 211);
     box-shadow: 0 5px 10px rgb(211, 211, 211, 0.2);
     transform: translateY(1px);
-    cursor: pointer;
+  }
+
+  section > form.password-field:active span {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 1s linear;
+  }
+
+  section > button:hover {
+    border: 0px;
+    transform: translateY(0px);
+    background-color: rgb(136, 200, 255, 0.5);
+    color: rgb(222, 222, 222);
+  }
+
+  section > button:active {
+    border: 1px solid rgb(222, 222, 222);
+    box-shadow: 0 5px 10px rgb(211, 211, 211, 0.2);
+    transform: translateY(1px);
+    color: white;
+  }
+
+  .container:hover {
+    transform: translateY(0px);
+  }
+
+  .container:active {
+    transform: translateY(1px);
   }
 }
