--- a/Styles/responsive.css
+++ b/Styles/responsive.css
@@ -32,7 +32,7 @@
     border: 1px solid rgb(222, 222, 222);
     box-shadow: 0 5px 10px rgb(211, 211, 211, 0.2);
     transform: translateY(1px);
-    color: white;
+    background-color: #88c8ff;
   }
 
   .container:active {
